--- a/web/index.html
+++ b/web/index.html
@@ -17,16 +17,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Parrafo H1</h1>
-    <h2>Parrafo H2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis laborum ut, asperiores pariatur itaque molestias omnis aspernatur iure et nobis ad veritatis fugiat, minus alias. Pariatur unde quam aperiam accusantium.</p>
-    <img src="img/juego.png" alt="Juego de tronos">
-    <h2>Parrafo H2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus enim cum ab deleniti mollitia, minima dicta nostrum sed sit placeat excepturi provident rem maiores saepe hic eligendi doloremque, nemo soluta.</p>
-    <img src="img/choque.png" alt="Choque de reyes">
-    <h3>Parrafo H3</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, velit! Voluptates nam vitae vero quam, quasi inventore exercitationem ut similique quod maxime officia ullam repudiandae ipsa, error fugiat? Tempora, culpa.</p>
-    <img src="img/tormenta.png" alt="Tormenta de espadas">
-    
+    <div class="contenedor">
+        <h1>Parrafo H1</h1>
+        <h2>Parrafo H2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis laborum ut, asperiores pariatur itaque molestias omnis aspernatur iure et nobis ad veritatis fugiat, minus alias. Pariatur unde quam aperiam accusantium.</p>
+        <img class="img-parrafo" src="img/juego.png" alt="Juego de tronos">
+        <h2>Parrafo H2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus enim cum ab deleniti mollitia, minima dicta nostrum sed sit placeat excepturi provident rem maiores saepe hic eligendi doloremque, nemo soluta.</p>
+        <img class="img-parrafo" src="img/choque.png" alt="Choque de reyes">
+        <h3>Parrafo H3</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, velit! Voluptates nam vitae vero quam, quasi inventore exercitationem ut similique quod maxime officia ullam repudiandae ipsa, error fugiat? Tempora, culpa.</p>
+        <img class="img-parrafo" src="img/tormenta.png" alt="Tormenta de espadas">
+    </div>
 </body>
 </html>
