--- a/web/clase2Web/index.html
+++ b/web/clase2Web/index.html
@@ -12,10 +12,23 @@
       <h1 class="banner-img">Qué es Cancion de Hielo y Fuego?</h1>
       <!-- <img src="img/destacado-leer-libros-games-of-thrones.jpg" alt="banner libros" srcset=""> -->
     </div>
-    <div>
+    <div class="cuerpo">
       <p>Canción de Hielo y Fuego, usualmente abreviado CDHyF, es una multipremiada serie de novelas y novelas cortas de fantasía épica escritas por el novelista y guionista estadounidense George R. R. Martin. Martin comenzó a escribir la serie en 1991 y el primer tomo se publicó en 1996. Originalmente planeada como una trilogía, actualmente se espera que la serie sea una heptalogía, ya que tiene cinco tomos publicados y dos más planeados. También hay tres novelas cortas que actúan como precuelas de la serie; y una serie de novelas cortas que recopilan los capítulos dedicados a un personaje determinado, ya publicados en las novelas principales. La serie ha sido traducida a dieciocho idiomas y el cuarto tomo alcanzó el primer lugar en la lista de best sellers del New York Times tras su publicación. En total, la serie ha vendido 2,2 millones de copias en los Estados Unidos.</p>
     </div>
   </div>
-  <div></div>
+  <div>
+    <div class="banner_subtitulos">
+      <div class="img_subs"><img src="img/klipartz.com.png" alt="" srcset=""></div>
+      <div class="subtitulos">
+        <h2>Temática</h2>
+      </div>
+      <div class="img_subs"><img src="img/pngwing.com.png" alt="" srcset=""></div>
+    </div>
+    <div class="cuerpo">
+      <p>La saga es conocida por tener personajes complejos, cambios de trama violentos y repentinos, e intrigas políticas bien desarrolladas. En un género donde la magia normalmente posee un papel central en el argumento, Canción de hielo y fuego se caracteriza por un uso limitado y sutil de la misma, empleándola como una fuerza ambigua y, a menudo, oscura.</p>
+      <br>
+      <p>Además, las novelas no giran alrededor de la lucha entre el Bien y el Mal, sino que los arcos argumentales se basan principalmente en luchas políticas y guerras civiles; sólo hay uno o dos arcos que sugieren la posibilidad de una amenaza externa.</p>
+    </div>
+  </div>
 </body>
 </html>
