update para entrega

--- a/web/clase2Web/index.html
+++ b/web/clase2Web/index.html
@@ -30,5 +30,24 @@
       <p>Además, las novelas no giran alrededor de la lucha entre el Bien y el Mal, sino que los arcos argumentales se basan principalmente en luchas políticas y guerras civiles; sólo hay uno o dos arcos que sugieren la posibilidad de una amenaza externa.</p>
     </div>
   </div>
+  <div class="obras">
+    <div class="subtitulos"><h2>Obras</h2></div>
+    <div class="cuerpo_obras">
+      <div class="subtitulos"><h3>Saga</h3></div>
+      <div class="obras_libros">
+        <li>Juego de Tronos</li>
+        <li>Choque de Reyes</li>
+        <li>Tormenta de Espadas</li>
+        <li>Festin de Cuervos</li>
+        <li>Danza de Dragones</li>
+      </div>
+      <div class="subtitulos"><h3>Obras del mundo de Cancion de Hielo y Fuego</h3></div>
+      <div class="obras_libros">
+        <li>Mundo de Hielo y Fuego</li>
+        <li>Fuego y Sangre</li>
+        <li>Cuentos de Dunk y Egg</li>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
