update: modal, y style

--- a/web/tpFinalWeb/index.html
+++ b/web/tpFinalWeb/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
   <head>
-    <div class="intro">
+    <div>
       <div class="banner">
         <h1 class="banner-tit">Qué es Cancion de Hielo y Fuego?</h1>
-        <!-- <img src="img/destacado-leer-libros-games-of-thrones.jpg" alt="banner libros" srcset=""> -->
       </div>
     </div>
   </head>
